src/App.css
/* ... */
.price-card.price-card-requried .num {
  color: #F85C70;
}

.portfolio .filters {
  border-bottom: 2px solid #dee2e6;
  border-radius: 0;
  padding-bottom: 4px;
  margin: 0 auto 20px;
  max-width: 400px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.portfolio .filters a {
  -webkit-flex-basis: 0;
      -ms-flex-preferred-size: 0;
          flex-basis: 0;
  display: block;
  color: #212529;
  font-size: 13px;
  font-weight: 500;
  opacity: .7;
  padding: 4px 10px;
  transition: 0.3s;
  -webkit-transition: 0.3s;
}

.portfolio .filters a:first-child {
  margin-left: 0;
}

.portfolio .filters a:last-child {
  margin-right: 0;
}

.portfolio .filters a:hover {
  opacity: .9;
}

.portfolio .filters a.active {
  opacity: 1;
  background: #F85C70;
  color: #fff;
}

.portfolio .portfolio-container .portfolio-item {
  position: relative;
  padding-left: 0;
  padding-right: 0;
  margin: 10px -5px;
  overflow: hidden;
  border-radius: 2px;
  -webkit-backface-visibility: hidden;
          backface-visibility: hidden;
}

.portfolio .portfolio-container .portfolio-item .content-holder {
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
  background: rgba(248, 92, 112, 0.8);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  text-align: center;
  padding: 0 20px;
  color: #fff;
  opacity: 0;
  visibility: hidden;
  transition: 0.5s;
  -webkit-transition: 0.5s;
}

.portfolio .portfolio-container .portfolio-item .content-holder .title {
  font-size: 22px;
  font-weight: 600;
}

.portfolio .portfolio-container .portfolio-item .content-holder .subtitle {
  font-weight: 500;
  opacity: 1;
  color: #fff;
}

.portfolio .portfolio-container .portfolio-item:hover .content-holder {
  opacity: 1;
  visibility: visible;
}

/* Porfolio wrapper */
.Porfolio-card {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
  border: 1px solid #dee2e6;
  margin-bottom: 30px;
  overflow: hidden;
  margin: 0 15px 30px;
}

.Porfolio-card .img-holder {
  min-width: 350px;
  max-width: 350px;
}

.Porfolio-card .img-holder img {
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
     object-fit: cover;
}

.Porfolio-card .content-holder {
  padding: 30px 20px 30px 30px;
}

.Porfolio-card .content-holder .title {
  font-weight: 500;
  font-size: 25px;
  opacity: .8;
}

.Porfolio-card .content-holder .post-details {
  margin: 15px 0 15px !important;
}

.Porfolio-card .content-holder .post-details i {
  display: inline-block;
  width: 15px;
}

.text-mini {
  font-size: .8rem;
  font-weight: bolder;
}

.Porfolio-card .content-holder .post-details a {
  margin-right: 10px;
  color: #444;
  text-decoration: none;
  display: inline-block;
  font-weight: 600;
  opacity: .7;
  font-size: 13px;
  cursor: pointer;
}

.Porfolio-card .content-holder .read-more {
  text-decoration: none;
  margin-top: 20px;
  display: block;
  font-size: 13px;
}

.Porfolio-card .content-holder .read-more i {
  position: relative;
  top: 1px;
}

@media (max-width: 991.98px) {
  .Porfolio-card {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .Porfolio-card .img-holder {
    width: 100%;
    max-width: 100%;
    min-width: 100%;
  }
}

.custom-map {
  height: 400px;
}

pre {
  border: 2px solid #dee2e6;
  padding: 15px;
  border-radius: 0.25rem;
  background: #f8f9fa;
}

pre code,
pre .code {
  color: #6c757d;
}

.dropdown-menu.form {
  width: 300px;
}

.social-icons {
  list-style-type: none;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
      -ms-flex-pack: justify;
          justify-content: space-around;
  max-width: 180px;
}

.social-icons .social-link {
  font-size: 18px;
}

.social-icons .social-link:hover {
  color: #F85C70;
}

.navbar {
  box-shadow: 0 1px 10px rgba(54, 54, 54, 0.18);
  -webkit-box-shadow: 0 1px 10px rgba(54, 54, 54, 0.18);
}

.navbar .navbar-nav:first-child .nav-item:first-child .nav-link {
  padding-left: 0;
}

.navbar .navbar-nav:last-child .nav-item:last-child .nav-link {
  padding-right: 0;
}

.navbar .nav-link {
  font-weight: bold;
  font-family: "Dosis","Open Sans",sans-serif;
}

.navbar .nav-link.active {
  color: #F85C70 !important;
}

.navbar .brand {
  text-align: center;
}

.navbar .brand .brand-img {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
      -ms-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  -weblit-transform: translate(-50%, -50%);
  border: 10px solid white;
  -webkit-transition: .5s !important;
  transition: .5s !important;
  -weblit-transition: .5s !important;
  z-index: 2;
  box-shadow: 0 5px 1px rgba(128, 128, 128, 0.13);
  width: 160px;
  border-radius: 50%;
}

.navbar .brand .brand-txt {
  position: relative;
  bottom: -20px;
  opacity: 0;
  -webkit-transition: 1s;
  transition: 1s;
  -weblit-transition: 1s;
  z-index: 1;
}

.navbar .brand .brand-txt .brand-subtitle {
  font-size: 13px;
  color: #888;
}

@media (max-width: 991.98px) {
  .navbar .brand {
    display: none;
  }
}

.navbar.affix .brand-txt {
  bottom: 0;
  opacity: 1;
}
/* ... */

